vettom-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vettom-ns
---
apiVersion: v1
kind : ResourceQuota
metadata:
    name: RQ_vettom-ns
spec:
    hard:
      requests.cpu: 500m
      requests.memory: 500Mib
      limits.cpu: 1000m
      limits.meory: 900Mib
