dvtools.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: hello-deploy
spec:
    replicas: 1
    minReadySeconds: 10
    template:
        metadata:
            labels:
              app: hello-world
        spec:
            containers:
            - name: hellow-pod
              image: nigelpoulton/pluralsight-docker-ci:latest
              ports:
              - containerPort: 8080
