hellow-world.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2019-03-13T08:47:36Z"
  generation: 2
  labels:
    app: hello-world
  name: hello-deploy
  namespace: vettom-ns
  resourceVersion: "932086"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/hello-deploy
  uid: a6cd41c6-456c-11e9-ae7d-3293efa259ce
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hello-world
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-world
    spec:
      containers:
      - image: nigelpoulton/pluralsight-docker-ci:latest
        imagePullPolicy: Always
        name: hellow-pod
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2019-03-15T11:53:25Z"
    lastUpdateTime: "2019-03-15T11:53:25Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 2
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
