SRE-proxy.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: vetton-proxy
spec:
    replicas: 1
    minReadySeconds: 10
    template:
        metadata:
            labels:
              app: alpine-nginx-version1.0
        spec:
            containers:
            - name: vettom-alpinenginx-web1
              image: index.docker.io/dennysv/alpine-nginx-version1.0
              ports:
              - containerPort: 80
              volumeMounts:
              - mountPath: /etc/nginx/conf.d # mount and place necessary config
                readOnly: true
                name: nginx-proxy
            volumes:
            - name: nginx-proxy
              configMap:
                name: nginx-proxy # place ConfigMap 
                items:
                  - key: proxyweb01.conf
                    path: proxyweb01.conf
                  - key: proxyweb02.conf
                    path: proxyweb02.conf
---
apiVersion: v1
kind: Service
metadata:
  name: vetton-proxy
  labels:
    app: alpine-nginx-version1.0
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: alpine-nginx-version1.0
