SRE-webconfigmap.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: vetton-nginx
spec:
    replicas: 1
    minReadySeconds: 10
    template:
        metadata:
            labels:
              app: alpine-nginx-version1.0
        spec:
            containers:
            - name: vettom-alpinenginx-web1
              image: index.docker.io/dennysv/alpine-nginx-version1.0
              ports:
              - containerPort: 80
              volumeMounts:
              - mountPath: /etc/nginx/conf.d # mount and place necessary config
                readOnly: true
                name: nginx-conf
            volumes:
            - name: nginx-conf
              configMap:
                name: nginx-conf # place ConfigMap 
                items:
                  - key: web01.conf
                    path: web01.conf
                  - key: web02.conf
                    path: web02.conf
                  - key: index1.html
                    path: web01/index.html # Directory and file name relative to mount
                  - key: index2.html
                    path: web02/index.html # Directory and file name relative to mount
---
apiVersion: v1
kind: Service
metadata:
  name: vetton-nginxsvc
  labels:
    app: alpine-nginx-version1.0
spec:
  # type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: alpine-nginx-version1.0


# apiVersion: v1
# kind: Service
# metadata:
#   name: vetton-nginxsvc
#   labels:
#     app: alpine-nginx-version1.0
# spec:
#   type: LoadBalancer
#   ports:
#   - protocol: TCP
#     port: 80
#   selector:
#     app: alpine-nginx-version1.0
