multihost-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vhost-ingress
spec:
  rules:
  - host: vettom.co.uk
    http:
      paths:
      - backend:
          serviceName: service1
          servicePort: 80
  - host: vettom1.co.uk
    http:
      paths:
      - backend:
          serviceName: service2
          servicePort: 80
